--- a/style/style.scss
+++ b/style/style.scss
@@ -218,6 +218,10 @@ main {
           width: 30px;
           margin: 10px 0 20px;
         }
+        .php-icon {
+          width: 40px;
+          margin: 10px 0 10px;
+        }
         h1 {
           font-size: 20px;
           color: #5e68c7;
