--- a/style/style.scss
+++ b/style/style.scss
@@ -3,6 +3,7 @@
   padding: 0;
   text-decoration: none;
   font-family: "poppins";
+  scroll-behavior: smooth;
 }
 body {
   // Hide the scrollbar
@@ -39,7 +40,7 @@ header {
     .menu {
       display: flex;
       list-style: none;
-      gap: 100px;
+      gap: 75px;
 
       li {
         a {
@@ -51,10 +52,10 @@ header {
           color: #a8bbbf;
         }
       }
-      @media screen and (max-width: 950px) {
-        gap: 70px;
+      @media screen and (max-width: 1000px) {
+        gap: 60px;
       }
-      @media screen and (max-width: 700px) {
+      @media screen and (max-width: 850px) {
         gap: 45px;
       }
     }
@@ -119,7 +120,7 @@ main {
             margin-bottom: 20px;
           }
           @media screen and (max-width: 1024px) {
-            margin-top: 0;
+            margin-top: -50px;
           }
         }
 
@@ -203,7 +204,8 @@ main {
       .html,
       .css,
       .javascript,
-      .php {
+      .php,
+      .laravel {
         display: flex;
         flex-direction: column;
         align-items: center;
@@ -241,6 +243,9 @@ main {
         transform: scale(1.1);
       }
       .php:hover {
+        transform: scale(1.1);
+      }
+      .laravel:hover {
         transform: scale(1.1);
       }
       // relation with grid-skills Class
@@ -297,7 +302,7 @@ main {
     box-sizing: border-box;
     justify-content: center;
 
-    @media screen and (max-width: 768px) {
+    @media screen and (max-width: 1200px) {
       grid-template-columns: 1fr;
       gap: 50px;
       width: 90%;
@@ -349,7 +354,7 @@ main {
         display: flex;
         margin: 0px 0 8px 5px;
         gap: 10px;
-        @media screen and (max-width: 960px) {
+        @media screen and (max-width: 965px) {
           display: grid;
           grid-template-columns: repeat(4, 1fr);
           margin-right: 5px;
@@ -395,10 +400,10 @@ main {
   }
 }
 
-aside {
+section {
   #particles-js {
     width: 100%;
-    height: 400px;
+    height: 500px;
     background-color: white;
   }
 }
