--- a/style/style.scss
+++ b/style/style.scss
@@ -188,12 +188,14 @@ main {
     }
     .grid-skills {
       display: grid;
-      grid-template-columns: repeat(auto-fit, minmax(180px, 1fr));
+      grid-template-columns: repeat(auto-fit, minmax(50px, 1fr));
       gap: 25px;
       margin-top: 40px;
       width: 80%;
       margin: 0 auto 40px;
       padding: 50px 0;
+      // justify-content: center/;
+      align-items: center;
       @media screen and (max-width: 425px) {
         width: 80%;
       }
@@ -205,24 +207,32 @@ main {
       .css,
       .javascript,
       .php,
-      .laravel {
+      .laravel,
+      .mysql,
+      .react {
         display: flex;
         flex-direction: column;
         align-items: center;
         text-align: center;
         margin: 0 auto;
-        background-color: rgba(214, 222, 224, 0.2);
+        // background-color: rgba(214, 222, 224, 0.2);
         border-radius: 5px;
         padding: 20px;
         transition: transform 0.4s;
 
         img {
           width: 30px;
-          margin: 10px 0 20px;
+          margin: 10px 0 0;
         }
-        .php-icon {
+        .php-image {
           width: 40px;
-          margin: 10px 0 10px;
+          align-items: center;
+        }
+
+        .mysql-image,
+        .laravel-image,
+        .react-image {
+          width: 35px;
         }
         h1 {
           font-size: 20px;
@@ -246,6 +256,12 @@ main {
         transform: scale(1.1);
       }
       .laravel:hover {
+        transform: scale(1.1);
+      }
+      .mysql:hover {
+        transform: scale(1.1);
+      }
+      .react:hover {
         transform: scale(1.1);
       }
       // relation with grid-skills Class
